plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'geumjeongyahak'
version = '0.0.1'
description = 'Geumjeong learning project - geumjeongyahak'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

ext {
	DOTENV_VERSION = '3.2.0'
	SPRING_DOC_VERSION = '2.8.15'
	JJWT_VERSION = '0.13.0'
	REST_ASSURED_VERSION = '6.0.0'
	GCP_SDK_VERSION = '7.4.5'
	FIREBASE_ADMIN_VERSION = '9.8.0'
	LOGSTASH_LOGBACK_ENCODER_VERSION = '8.0'
}

dependencies {
	// Web and API	
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-api:${SPRING_DOC_VERSION}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${SPRING_DOC_VERSION}"

	// Security and JWT
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation "io.jsonwebtoken:jjwt-api:${JJWT_VERSION}"
	runtimeOnly  "io.jsonwebtoken:jjwt-impl:${JJWT_VERSION}"
	runtimeOnly  "io.jsonwebtoken:jjwt-jackson:${JJWT_VERSION}"
	implementation "io.github.cdimascio:dotenv-java:${DOTENV_VERSION}"

	// Database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	runtimeOnly 'org.postgresql:postgresql'

	// google cloud storage
	implementation platform("com.google.cloud:spring-cloud-gcp-dependencies:${GCP_SDK_VERSION}")
	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
	implementation "com.google.firebase:firebase-admin:${FIREBASE_ADMIN_VERSION}"
	implementation 'com.google.cloud:google-cloud-firestore'
	
	// AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// Development Convenience
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Monitoring and Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	implementation "net.logstash.logback:logstash-logback-encoder:${LOGSTASH_LOGBACK_ENCODER_VERSION}"

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'
	testImplementation 'io.rest-assured:rest-assured'
}

tasks.named('test') {
	useJUnitPlatform()
}
